<resources>
    <string name="app_name">辅助功能工具</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="accessibility_enabled">辅助功能已开启！</string>
    <string name="accessibility_disabled">辅助功能未开启！\n请点击下方按钮开启！</string>
    <string name="go_accessibility_page">前往辅助功能页</string>
    <string name="go_app_detail_page">前往应用详情页</string>
    <string name="view_explorer">View查看器</string>
    <string name="view_explorer_tools_off">View查看工具：关</string>
    <string name="view_explorer_tools_on">View查看工具：开</string>
    <string name="turn_page_tools_off">翻页工具：关</string>
    <string name="turn_page_tools_on">翻页工具：开</string>
    <string name="click_tools">连点器</string>
    <string name="click_tools_off">连点器：关</string>
    <string name="click_tools_on">连点器：开</string>
    <string name="palette">画板</string>
    <string name="setting">设置</string>
    <string name="accessibility_service_label">@string/app_name</string>
    <string name="accessibility_service_desc">开启之后可以使用各种辅助功能。</string>
    <string name="toast_please_select_my_app">请选择“辅助功能工具”！</string>

    <string name="btn_txt_show_view_area">显示View区域</string>
    <string name="btn_txt_hide_view_area">隐藏View区域</string>
    <string name="btn_txt_close_view_explorer_alert">关闭弹窗</string>
    <string name="toast_view_explorer_unsupported">Android7.0以下不支持View区域查看功能！</string>

    <string name="btn_txt_make_alert_small">缩小\n弹窗</string>
    <string name="btn_txt_make_alert_large">放大\n弹窗</string>
    <string name="btn_txt_make_alert_close">关闭\n弹窗</string>
    <string name="btn_txt_turn_left_page">向左\n翻页</string>
    <string name="btn_txt_turn_up_page">向上\n翻页</string>
    <string name="btn_txt_turn_right_page">向右\n翻页</string>
    <string name="btn_txt_turn_up_page_video">短视频向上翻页</string>
    <string name="btn_txt_turn_page_stop">停止\n翻页</string>
    <string name="toast_gesture_unsupported">Android7.0以下不支持手势功能！</string>

    <string name="title_set_click_x">点击横坐标</string>
    <string name="title_set_click_y">点击纵坐标</string>
    <string name="title_set_click_interval">点击间隔毫秒</string>
    <string name="title_set_click_count">点击次数</string>
    <string name="btn_txt_start_edit">开始编辑</string>
    <string name="btn_txt_save_config">保存</string>
    <string name="btn_txt_start_click">开始点击</string>
    <string name="btn_txt_stop_click">停止点击</string>
    <string name="toast_click_x_coordinate_wrong">横坐标格式错误！</string>
    <string name="toast_click_y_coordinate_wrong">纵坐标格式错误！</string>
    <string name="toast_click_interval_wrong">点击间隔格式错误！</string>
    <string name="toast_click_count_wrong">点击次数格式错误！</string>
    <string name="toast_click_params_saved">保存成功！</string>

    <string name="palette_desc">这是一个画板\n当前绝对坐标：(%.2f, %.2f)\n已点击次数：%d</string>

    <string name="settings_view_area_color">View区域颜色</string>
    <string name="settings_red">红：%03d(#%s)</string>
    <string name="settings_green">绿：%03d(#%s)</string>
    <string name="settings_blue">蓝：%03d(#%s)</string>
    <string name="settings_alpha">透明：%03d(#%s)</string>
    <string name="settings_view_area_type">View区域类型</string>
    <string name="settings_view_area_translate_left">View区域绘制时左移\n(屏幕左侧有状态栏时请开启)</string>
    <string name="settings_view_area_translate_top">View区域绘制时上移\n(屏幕上方有状态栏时请开启)</string>
    <string name="settings_view_area_type_all">全部</string>
    <string name="settings_view_area_type_important">important</string>
    <string name="settings_view_area_type_contain_text">含文字的</string>
    <string name="settings_view_area_text_size">View区域文字\n大小：%dpx</string>
    <string name="settings_view_area_text_show_pkg">View区域文字显示应用包名</string>
    <string name="settings_view_area_text_single_line">View区域文字单行显示</string>
    <string name="settings_view_area_write_log_to_file_when_show">显示View区域时输出日志到文件</string>
    <string name="settings_toast_view_area_write_log_to_xxx_path">日志会输出到%s</string>
    <string name="settings_restore_default_settings">恢复默认设置</string>
</resources>