<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/tv_time"
        style="@style/TxtTitle"
        android:text="@string/view_explorer" />

    <TextView
        android:id="@+id/btn_show_view_area"
        style="@style/AlertButton"
        android:layout_width="80dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_txt_show_view_area" />
    <TextView
        android:id="@+id/btn_hide_view_area"
        style="@style/AlertButton"
        android:layout_width="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_txt_hide_view_area" />
</merge>